auto publishing updates to notebooks

--- a/imp_sample.ipynb
+++ b/imp_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6313f364",
+   "id": "9dd9baf3",
    "metadata": {},
    "source": [
     "# Computing Mean of a Likelihood Ratio Process"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e2c2b8",
+   "id": "61c99579",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "663e9e9a",
+   "id": "63df602b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d796536",
+   "id": "3598f1d2",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8baae4",
+   "id": "e4d718e0",
    "metadata": {},
    "source": [
     "## Mathematical Expectation of Likelihood Ratio\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1337ab",
+   "id": "a5ab9f88",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f6fded",
+   "id": "1e0cf5ac",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918d097a",
+   "id": "993d0b33",
    "metadata": {},
    "source": [
     "The likelihood ratio is `l(w)=f(w)/g(w)`."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a6800f",
+   "id": "9656bad9",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6cbe246",
+   "id": "51fc3244",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db58edce",
+   "id": "62410e9f",
    "metadata": {},
    "source": [
     "The above plots shows that as $ \\omega \\rightarrow 0 $, $ f \\left(\\omega\\right) $ is unchanged and $ g \\left(\\omega\\right) \\rightarrow 0 $, so  the likelihood ratio approaches infinity.\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a193f25",
+   "id": "3535b7d0",
    "metadata": {},
    "source": [
     "## Importance sampling\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d871623",
+   "id": "4bbcf491",
    "metadata": {},
    "source": [
     "## Selecting a Sampling Distribution\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c57ebc2",
+   "id": "4930ae1f",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4e79cd",
+   "id": "d7ba1769",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ab3e64",
+   "id": "548fcc27",
    "metadata": {},
    "source": [
     "## Approximating a cumulative likelihood ratio\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1a9b0f",
+   "id": "675c708a",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7dacca6",
+   "id": "7fed4b92",
    "metadata": {},
    "source": [
     "Consider the case when $ T=1 $, which amounts  to approximating $ E_0\\left[\\ell\\left(\\omega\\right)\\right] $\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c6b03e",
+   "id": "a93d28f4",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fbac6a1",
+   "id": "e7f6e5f5",
    "metadata": {},
    "source": [
     "For our importance sampling estimate, we set $ q = h $."
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d25e836",
+   "id": "9e37f6a4",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d01bc9e",
+   "id": "b66ad8cb",
    "metadata": {},
    "source": [
     "Evidently, even at T=1, our importance sampling  estimate is closer to $ 1 $ than is the Monte Carlo estimate.\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adee8130",
+   "id": "e1ca29fe",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518e50d2",
+   "id": "65e4dd8b",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f54ffb5",
+   "id": "cafc7068",
    "metadata": {},
    "source": [
     "## Distribution of  Sample Mean\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3408b550",
+   "id": "3e450b47",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40beeda2",
+   "id": "dcf97db9",
    "metadata": {},
    "source": [
     "Again, we first consider estimating $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ by setting T=1.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb76f77",
+   "id": "1e5cd885",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f106b927",
+   "id": "ccf86719",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eee69b6",
+   "id": "77c69d83",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdcc3f5b",
+   "id": "60f3e37c",
    "metadata": {},
    "source": [
     "Although both methods tend to provide a mean estimate of $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ close to $ 1 $, the importance sampling estimates have  smaller variance.\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed67abf5",
+   "id": "cd3562ac",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4478e1",
+   "id": "e58d9204",
    "metadata": {},
    "source": [
     "The simulation exercises above show that the importance sampling estimates are unbiased under all $ T $\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e945db",
+   "id": "e6eaadbd",
    "metadata": {},
    "source": [
     "## More Thoughts about Choice of Sampling Distribution\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e07a1cc8",
+   "id": "c67097cf",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a98a769",
+   "id": "2fc2935c",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c09df55",
+   "id": "d4135ccb",
    "metadata": {},
    "source": [
     "We could also use other distributions as our importance distribution.\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3d887f",
+   "id": "0f074f11",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6f31fd",
+   "id": "92bcbf53",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36da8b8f",
+   "id": "11893bea",
    "metadata": {},
    "source": [
     "We consider two additonal distributions.\n",
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a5b0c4",
+   "id": "6d4dd781",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beaf1b49",
+   "id": "a1600b03",
    "metadata": {},
    "source": [
     "Our simulations suggest that indeed $ h_2 $ is a quite  good importance sampling distribution for our problem.\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f72bea8",
+   "id": "fcb38174",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37db81f6",
+   "id": "19d5050c",
    "metadata": {},
    "source": [
     "However, $ h_3 $ is evidently a poor importance sampling distribution forpir problem,\n",
@@ -771,7 +771,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658080.460989,
+  "date": 1706679396.2116644,
   "filename": "imp_sample.md",
   "kernelspec": {
    "display_name": "Python",
