--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9e0a250",
+   "id": "c535d623",
    "metadata": {},
    "source": [
     "# Statistics for Computational Economics\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ca931d2",
+   "id": "9f9a37be",
    "metadata": {},
    "source": [
     "# Elementary Statistics\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb4a575",
+   "id": "eba85de0",
    "metadata": {},
    "source": [
     "# Information & Bayesian Statistics\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5122faba",
+   "id": "7dc29490",
    "metadata": {},
    "source": [
     "# Applications of Statistics\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bdeae19",
+   "id": "c2d9d7cb",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -73,7 +73,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658080.4815319,
+  "date": 1706679396.23153,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
