--- a/ols.ipynb
+++ b/ols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5823f624",
+   "id": "b54aeae3",
    "metadata": {},
    "source": [
     "# Linear Regression in Python"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7140b34c",
+   "id": "2a20c9f0",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba459ace",
+   "id": "97e04293",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dafa314",
+   "id": "c8eb7a54",
    "metadata": {
     "hide-output": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8da96b7",
+   "id": "3fc1528b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4bdcf9c",
+   "id": "fe1a4614",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139182be",
+   "id": "db44462f",
    "metadata": {},
    "source": [
     "### Prerequisites\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae43d79",
+   "id": "71b155ca",
    "metadata": {},
    "source": [
     "## Simple Linear Regression\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d3a8ee",
+   "id": "1428597b",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43e846b1",
+   "id": "f8f8c5ac",
    "metadata": {},
    "source": [
     "Let’s use a scatterplot to see whether any obvious relationship exists\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee79a1de",
+   "id": "c3e5deff",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53ac4b7",
+   "id": "caa54890",
    "metadata": {},
    "source": [
     "The plot shows a fairly strong positive relationship between\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c22d1885",
+   "id": "ed607692",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e699fb8d",
+   "id": "e4c7ea80",
    "metadata": {},
    "source": [
     "The most common technique to estimate the parameters ($ \\beta $’s)\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91d4c15",
+   "id": "fe2c05fe",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71fb37a",
+   "id": "6db2df18",
    "metadata": {},
    "source": [
     "Now we can construct our model in `statsmodels` using the OLS function.\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df3bbb2c",
+   "id": "3258c56f",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f401b8ca",
+   "id": "7dedcaf9",
    "metadata": {},
    "source": [
     "So far we have simply constructed our model.\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d5986d",
+   "id": "97bfd289",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9865113f",
+   "id": "0c87de6a",
    "metadata": {},
    "source": [
     "We now have the fitted regression model stored in `results`.\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e850a42",
+   "id": "64c826cc",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31fd97ac",
+   "id": "83a10aae",
    "metadata": {},
    "source": [
     "From our results, we see that\n",
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ebfc2ea",
+   "id": "fcbcd00d",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb20cc4",
+   "id": "65721d61",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2158801c",
+   "id": "9e0e8f7b",
    "metadata": {},
    "source": [
     "An easier (and more accurate) way to obtain this result is to use\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bba00af",
+   "id": "a9cfc73c",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b68cadfa",
+   "id": "77e137b2",
    "metadata": {},
    "source": [
     "We can obtain an array of predicted $ {logpgp95}_i $ for every value\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e7980f",
+   "id": "a5e64ff5",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5421dd10",
+   "id": "3f885984",
    "metadata": {},
    "source": [
     "## Extending the Linear Regression Model\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e052f540",
+   "id": "9e678829",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e63e74",
+   "id": "e67d98ac",
    "metadata": {},
    "source": [
     "Now that we have fitted our model, we will use `summary_col` to\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148b591b",
+   "id": "2672b15c",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5f508c4",
+   "id": "1f2b6ea1",
    "metadata": {},
    "source": [
     "## Endogeneity\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47d2f3b5",
+   "id": "224ecac5",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0387eae3",
+   "id": "b3ba6034",
    "metadata": {},
    "source": [
     "The second condition may not be satisfied if settler mortality rates in the 17th to 19th centuries have a direct effect on current GDP (in addition to their indirect effect through institutions).\n",
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf04e327",
+   "id": "534e4904",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29669cff",
+   "id": "8671514a",
    "metadata": {},
    "source": [
     "**Second stage**\n",
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17beaa4",
+   "id": "4db813d6",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d38f22d",
+   "id": "9d5564ea",
    "metadata": {},
    "source": [
     "The second-stage regression results give us an unbiased and consistent\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c4c7da8",
+   "id": "b3f1ed32",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b16ca6",
+   "id": "19cf4229",
    "metadata": {},
    "source": [
     "Given that we now have consistent and unbiased estimates, we can infer\n",
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58cb8faa",
+   "id": "bd0418b0",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b811862f",
+   "id": "c01f4d3f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dc5dfa",
+   "id": "a90c4802",
    "metadata": {},
    "source": [
     "## Exercise 2.1\n",
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335de197",
+   "id": "9e3f9c31",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.1](https://stats.quantecon.org/#ols_ex1)"
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb1e24f1",
+   "id": "7cb62c7d",
    "metadata": {
     "hide-output": false
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "297ed7ff",
+   "id": "4ed6b28b",
    "metadata": {},
    "source": [
     "The output shows that the coefficient on the residuals is statistically\n",
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae808b0",
+   "id": "bbc4450e",
    "metadata": {},
    "source": [
     "## Exercise 2.2\n",
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b45207",
+   "id": "02d73b1f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.2](https://stats.quantecon.org/#ols_ex2)"
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d3351a7",
+   "id": "1777f9b1",
    "metadata": {
     "hide-output": false
    },
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f96cabf",
+   "id": "8f882325",
    "metadata": {},
    "source": [
     "It is also possible to use `np.linalg.inv(X.T @ X) @ X.T @ y` to solve\n",
@@ -1033,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658081.295134,
+  "date": 1706679397.0081968,
   "filename": "ols.md",
   "kernelspec": {
    "display_name": "Python",
