--- a/pandas_panel.ipynb
+++ b/pandas_panel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5cfbf2a",
+   "id": "bc912bed",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e76c4a",
+   "id": "f2cb6f42",
    "metadata": {},
    "source": [
     "# Pandas for Panel Data\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e20c9a3",
+   "id": "04b6c2be",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13922f9",
+   "id": "08e6b430",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5420771e",
+   "id": "7131bb0c",
    "metadata": {},
    "source": [
     "## Slicing and Reshaping Data\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511cacd7",
+   "id": "e5e38b29",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21e6956",
+   "id": "01e7c744",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d730b025",
+   "id": "c47be94a",
    "metadata": {},
    "source": [
     "Let’s have a look at what we’ve got to work with"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7ad4afc",
+   "id": "26664883",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8878f858",
+   "id": "6d7003b3",
    "metadata": {},
    "source": [
     "The data is currently in long format, which is difficult to analyze when there are several dimensions to the data.\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5cc191",
+   "id": "426f8d31",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91993559",
+   "id": "84d17bef",
    "metadata": {},
    "source": [
     "To more easily filter our time series data, later on, we will convert the index into a `DateTimeIndex`"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2defa9",
+   "id": "140c02ec",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4b9cb4",
+   "id": "c5ae821e",
    "metadata": {},
    "source": [
     "The columns contain multiple levels of indexing, known as a\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6416c2",
+   "id": "d87eaa4a",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3558c18",
+   "id": "cc549d53",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29db6b57",
+   "id": "e2cdb8e2",
    "metadata": {},
    "source": [
     "Like before, we can select the country (the top level of our\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4b53171",
+   "id": "2f6aa006",
    "metadata": {
     "hide-output": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8d4fea",
+   "id": "e585551d",
    "metadata": {},
    "source": [
     "Stacking and unstacking levels of the `MultiIndex` will be used\n",
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bcef141",
+   "id": "55b90bd6",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6949ef1",
+   "id": "0a272d23",
    "metadata": {},
    "source": [
     "We can also pass in an argument to select the level we would like to\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce55df6",
+   "id": "1704ad21",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f61de3",
+   "id": "42f23941",
    "metadata": {},
    "source": [
     "Using a `DatetimeIndex` makes it easy to select a particular time\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e04b3c",
+   "id": "76a960c8",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "909a7274",
+   "id": "5c14c2e2",
    "metadata": {},
    "source": [
     "For the rest of lecture, we will work with a dataframe of the hourly\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a000f580",
+   "id": "15f0fa61",
    "metadata": {
     "hide-output": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e13cdf8",
+   "id": "d03e7d48",
    "metadata": {},
    "source": [
     "## Merging Dataframes and Filling NaNs\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da2cd51b",
+   "id": "0905aa05",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058de6bb",
+   "id": "59e3111f",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ba8f3c",
+   "id": "d4299052",
    "metadata": {},
    "source": [
     "First, we’ll select just the country and continent variables from\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a501e37b",
+   "id": "9c263f2b",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5c6fd9",
+   "id": "ad9dc40b",
    "metadata": {},
    "source": [
     "We want to merge our new dataframe, `worlddata`, with `realwage_f`.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a138b80",
+   "id": "50b4fc28",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d349ce",
+   "id": "620865d1",
    "metadata": {},
    "source": [
     "We can use either left, right, inner, or outer join to merge our\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "226c21b1",
+   "id": "7412802c",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31beee79",
+   "id": "060b6e22",
    "metadata": {},
    "source": [
     "Countries that appeared in `realwage_f` but not in `worlddata` will\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ee755d",
+   "id": "8bc65532",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ba9c13",
+   "id": "b3450a8a",
    "metadata": {},
    "source": [
     "We have three missing values!\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ee3b5f",
+   "id": "216dce4e",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23bcc73",
+   "id": "8f5969fa",
    "metadata": {},
    "source": [
     "We don’t want to overwrite the entire series with this mapping.\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd73b6eb",
+   "id": "69381bdc",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c421e54",
+   "id": "8290718d",
    "metadata": {},
    "source": [
     "We will also combine the Americas into a single continent - this will make our visualization nicer later on.\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83ca659",
+   "id": "08242528",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad2df4c1",
+   "id": "214f4374",
    "metadata": {},
    "source": [
     "Now that we have all the data we want in a single `DataFrame`, we will\n",
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a9d64a",
+   "id": "9a0b15bc",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76065ce0",
+   "id": "a9ddf9c4",
    "metadata": {},
    "source": [
     "While merging, we lost our `DatetimeIndex`, as we merged columns that\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c135d1",
+   "id": "69a88bf3",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194e9952",
+   "id": "be710ccd",
    "metadata": {},
    "source": [
     "Now that we have set the merged columns as the index, we can recreate a\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715a053b",
+   "id": "380705cd",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae8507a",
+   "id": "a42f4b67",
    "metadata": {},
    "source": [
     "The `DatetimeIndex` tends to work more smoothly in the row axis, so we\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "418ef5a6",
+   "id": "e7e40788",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "627a2b3f",
+   "id": "63d8536f",
    "metadata": {},
    "source": [
     "## Grouping and Summarizing Data\n",
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbaa5cb",
+   "id": "d5c0b173",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a021289",
+   "id": "46c0d179",
    "metadata": {},
    "source": [
     "Using this series, we can plot the average real minimum wage over the\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbcbffab",
+   "id": "946580ab",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c28a780",
+   "id": "e0fb33dd",
    "metadata": {
     "hide-output": false
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa75e9ab",
+   "id": "72d04665",
    "metadata": {},
    "source": [
     "Passing in `axis=1` to `.mean()` will aggregate over columns (giving\n",
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a371168",
+   "id": "b8c57507",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c6610e",
+   "id": "9531bed1",
    "metadata": {},
    "source": [
     "We can plot this time series as a line graph"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37cb0f6d",
+   "id": "96bbfba3",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0820969d",
+   "id": "701e3650",
    "metadata": {},
    "source": [
     "We can also specify a level of the `MultiIndex` (in the column axis)\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a3c968",
+   "id": "1f31daca",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8502f765",
+   "id": "809af4b3",
    "metadata": {},
    "source": [
     "We can plot the average minimum wages in each continent as a time series"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b167b8",
+   "id": "8503a388",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "286b8073",
+   "id": "cf326bcf",
    "metadata": {},
    "source": [
     "We will drop Australia as a continent for plotting purposes"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ebc83ea",
+   "id": "ea1357a7",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073c8da5",
+   "id": "49912e35",
    "metadata": {},
    "source": [
     "`.describe()` is useful for quickly retrieving a number of common\n",
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa6e8ec1",
+   "id": "279952ae",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adcb0e86",
+   "id": "a9ced308",
    "metadata": {},
    "source": [
     "This is a simplified way to use `groupby`.\n",
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa7b3a3",
+   "id": "5b44facc",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b630d23",
+   "id": "6ffb1e51",
    "metadata": {},
    "source": [
     "Calling an aggregation method on the object applies the function to each\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b377242",
+   "id": "9f7c8237",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32227df2",
+   "id": "ab161cf9",
    "metadata": {},
    "source": [
     "Calling `.get_group()` to return just the countries in a single group,\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d9c689",
+   "id": "38f5dbc8",
    "metadata": {
     "hide-output": false
    },
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ba3816",
+   "id": "1f9d896d",
    "metadata": {},
    "source": [
     "## Final Remarks\n",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd58f31a",
+   "id": "4879b718",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "420464f4",
+   "id": "80e86364",
    "metadata": {},
    "source": [
     "## Exercise 1.1\n",
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae0e4c79",
+   "id": "e5150435",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf34d68",
+   "id": "8bbea2d2",
    "metadata": {},
    "source": [
     "Reading in the CSV file returns a panel dataset in long format. Use `.pivot_table()` to construct\n",
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbb8f72d",
+   "id": "70b77235",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.1](https://stats.quantecon.org/#pp_ex1)"
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94896573",
+   "id": "091e8be1",
    "metadata": {
     "hide-output": false
    },
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db263683",
+   "id": "76400a5d",
    "metadata": {},
    "source": [
     "This is a large dataset so it is useful to explore the levels and\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2a11c6",
+   "id": "61cecf07",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1fe33e0",
+   "id": "9df26dd0",
    "metadata": {},
    "source": [
     "Variables within levels can be quickly retrieved with a loop"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c298d1",
+   "id": "519e43e3",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4c1da15",
+   "id": "5b4781ea",
    "metadata": {},
    "source": [
     "## Exercise 1.2\n",
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1415deee",
+   "id": "aa6b52e1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.2](https://stats.quantecon.org/#pp_ex2)\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75336d96",
+   "id": "04053ab9",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83074bef",
+   "id": "ef96dd84",
    "metadata": {},
    "source": [
     "We need to get rid of a few items in `GEO` which are not countries.\n",
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62a873e0",
+   "id": "855e5cf3",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dce22e1",
+   "id": "90ec47b4",
    "metadata": {},
    "source": [
     "Select only percentage employed in the active population from the\n",
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4374332d",
+   "id": "1640a3e8",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7fcbf13",
+   "id": "f0a09f6f",
    "metadata": {},
    "source": [
     "Drop the ‘Total’ value before creating the grouped boxplot"
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b1fafcc",
+   "id": "62bf4f9a",
    "metadata": {
     "hide-output": false
    },
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a527ef",
+   "id": "33ee109e",
    "metadata": {
     "hide-output": false
    },
@@ -1252,7 +1252,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658081.3571572,
+  "date": 1706679397.069041,
   "filename": "pandas_panel.md",
   "kernelspec": {
    "display_name": "Python",
