--- a/util_rand_resp.ipynb
+++ b/util_rand_resp.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2357ce5",
+   "id": "ed0a9761",
    "metadata": {
     "hide-output": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea58f29",
+   "id": "66f2ddc7",
    "metadata": {},
    "source": [
     "# Expected Utilities of Random Responses"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3844a10d",
+   "id": "0c37b7ae",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbc258f",
+   "id": "9219fdd2",
    "metadata": {},
    "source": [
     "## Privacy Measures\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bfa0c9f",
+   "id": "38d39c4c",
    "metadata": {},
    "source": [
     "## Zoo of Concepts\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c7ba24",
+   "id": "77f91957",
    "metadata": {},
    "source": [
     "### Leysieffer and Warner(1976)\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3fe26ea",
+   "id": "3cca9f52",
    "metadata": {},
    "source": [
     "### Lanke(1976)\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b8bff3",
+   "id": "63fecca0",
    "metadata": {},
    "source": [
     "### 2.3 Fligner, Policello, and Singh\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e68a3e6d",
+   "id": "a8764b9c",
    "metadata": {},
    "source": [
     "### 2.4 Greenberg, Kuebler, Abernathy, and Horvitz (1977)\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb29315f",
+   "id": "a594e142",
    "metadata": {},
    "source": [
     "## Respondent’s Expected Utility"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9235b4e4",
+   "id": "835a0ab8",
    "metadata": {},
    "source": [
     "### Truth Border\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eda3e46",
+   "id": "92fa6901",
    "metadata": {},
    "source": [
     "### Drawing a  Truth Border\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44db886",
+   "id": "3e3fb755",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0b20c5",
+   "id": "db8b33e6",
    "metadata": {},
    "source": [
     "Figure 1.1 three types of truth border.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "472258bc",
+   "id": "a6e9baf9",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e8b5ec6",
+   "id": "5910a74d",
    "metadata": {},
    "source": [
     "## Utilitarian View of Survey Design"
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba7f2a5",
+   "id": "6ba18175",
    "metadata": {},
    "source": [
     "### Iso-variance Curves\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6cccbc9",
+   "id": "2d5c04ca",
    "metadata": {},
    "source": [
     "### Drawing  Iso-variance Curves\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389faf20",
+   "id": "607962bc",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ac7aca",
+   "id": "62176b4e",
    "metadata": {},
    "source": [
     "Properties of  iso-variance curves  are:\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9234664d",
+   "id": "6c5335d6",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a64214a",
+   "id": "8b823d5f",
    "metadata": {},
    "source": [
     "### Optimal Survey\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5df9535",
+   "id": "655660f1",
    "metadata": {},
    "source": [
     "## Criticisms of Proposed Privacy Measures\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b95767",
+   "id": "be4b147d",
    "metadata": {},
    "source": [
     "### Analysis of Method of Lanke’s (1976)\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac9a1fb",
+   "id": "66ae0d2a",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41330b7c",
+   "id": "c0abac4b",
    "metadata": {},
    "source": [
     "### Method of Leysieffer and Warner (1976)\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ea3db3",
+   "id": "900ae8a9",
    "metadata": {},
    "source": [
     "### Analysis on the Method of Chaudhuri and Mukerjee’s (1988)\n",
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2909f775",
+   "id": "54075458",
    "metadata": {
     "hide-output": false
    },
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6961f80f",
+   "id": "93c72681",
    "metadata": {
     "hide-output": false
    },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5837fd2",
+   "id": "dc5cb237",
    "metadata": {},
    "source": [
     "### Method of Greenberg et al. (1977)\n",
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b3244f",
+   "id": "8fe4b261",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -914,7 +914,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658081.6079504,
+  "date": 1706679397.314563,
   "filename": "util_rand_resp.md",
   "kernelspec": {
    "display_name": "Python",
