--- a/back_prop.ipynb
+++ b/back_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b1eaea0",
+   "id": "fbeba98a",
    "metadata": {},
    "source": [
     "# Introduction to Artificial Neural Networks"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95da7c07",
+   "id": "a86b10c4",
    "metadata": {
     "hide-output": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a5447b",
+   "id": "4137ea79",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716e0e06",
+   "id": "cec798f8",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9779f0d1",
+   "id": "caddf4a9",
    "metadata": {},
    "source": [
     "## A Deep (but not Wide) Artificial Neural Network\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e0ef464",
+   "id": "3c65128b",
    "metadata": {},
    "source": [
     "## Calibrating  Parameters\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3bed0c",
+   "id": "1f822d32",
    "metadata": {},
    "source": [
     "## Back Propagation and the Chain Rule\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d828da",
+   "id": "b7868373",
    "metadata": {},
    "source": [
     "## Training Set\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775bf8f5",
+   "id": "e40d8669",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4881da9e",
+   "id": "27e9b84a",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97e25ee7",
+   "id": "13e0c782",
    "metadata": {
     "hide-output": false
    },
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cbe8bf",
+   "id": "1b6a89ca",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e965a4db",
+   "id": "7ef6282d",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66d2fbf",
+   "id": "65f1e251",
    "metadata": {
     "hide-output": false
    },
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd804ab",
+   "id": "f6cb17d1",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f47f671",
+   "id": "45b2882f",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd1c8dae",
+   "id": "5ca46510",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbc2bb1",
+   "id": "ec15f7e2",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49af77b2",
+   "id": "a5be370e",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0b1625",
+   "id": "9514245c",
    "metadata": {
     "hide-output": false
    },
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53339308",
+   "id": "f7c32630",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0182d81",
+   "id": "f710129e",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a0490e",
+   "id": "5043912a",
    "metadata": {},
    "source": [
     "## Example 1\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f741fcbf",
+   "id": "7e5f8f6a",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d01a48b9",
+   "id": "0f64fb6d",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170d10cd",
+   "id": "bed7fd2d",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f15617e",
+   "id": "87e3ecce",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "578e4084",
+   "id": "4dfe23ed",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56c8aa40",
+   "id": "65d0321a",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca9464c",
+   "id": "1b913373",
    "metadata": {},
    "source": [
     "## How Deep?\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b43dbeb",
+   "id": "09dfb6d4",
    "metadata": {},
    "source": [
     "## Example 2\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b968984d",
+   "id": "aecf141f",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51d46d6",
+   "id": "e4486623",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462712dc",
+   "id": "87fa056b",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb66a5a",
+   "id": "e95d0773",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff54754",
+   "id": "770deaf3",
    "metadata": {
     "hide-output": false
    },
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb446fd7",
+   "id": "614b9cfe",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefa8b98",
+   "id": "b2e6bbcf",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67885d5d",
+   "id": "f6dd77ed",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38763da",
+   "id": "06aca14d",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1957df40",
+   "id": "5e2e0a4a",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b40074",
+   "id": "10e8329d",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -891,7 +891,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658080.097546,
+  "date": 1706679395.8628852,
   "filename": "back_prop.md",
   "kernelspec": {
    "display_name": "Python",
