--- a/exchangeable.ipynb
+++ b/exchangeable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d54a9758",
+   "id": "9ca2a89b",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "300adbcf",
+   "id": "d3c80bdd",
    "metadata": {},
    "source": [
     "# Exchangeability and Bayesian Updating"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f4e16e",
+   "id": "30c35715",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6773cec0",
+   "id": "6e849c6e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fbca507",
+   "id": "5116ac86",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ee5f24",
+   "id": "eea03a4b",
    "metadata": {},
    "source": [
     "## Independently and Identically Distributed\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362f857e",
+   "id": "090eb86b",
    "metadata": {},
    "source": [
     "### IID Means Past Observations Don’t Tell Us Anything About Future Observations\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f871f26",
+   "id": "212486de",
    "metadata": {},
    "source": [
     "## A Setting in Which Past Observations Are Informative\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e651738",
+   "id": "a204de01",
    "metadata": {},
    "source": [
     "## Relationship Between IID and Exchangeable\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b795d93",
+   "id": "349dde4f",
    "metadata": {},
    "source": [
     "## Exchangeability\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290ef81e",
+   "id": "671bb996",
    "metadata": {},
    "source": [
     "## Bayes’ Law\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177eedcb",
+   "id": "9cfe9202",
    "metadata": {},
    "source": [
     "## More Details about Bayesian Updating\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aa5a4c5",
+   "id": "c54f6f14",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a0f4bf4",
+   "id": "48e25b92",
    "metadata": {},
    "source": [
     "Now we’ll create a group of graphs that illustrate  dynamics induced by Bayes’ Law.\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e366c558",
+   "id": "b671f2d6",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b77217",
+   "id": "626fd072",
    "metadata": {},
    "source": [
     "Please look at the three graphs above created for an instance in which $ f $ is a uniform distribution on $ [0,1] $\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec32a31d",
+   "id": "ec297730",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc774865",
+   "id": "73e030a9",
    "metadata": {},
    "source": [
     "Notice how the likelihood ratio, the middle graph, and the arrows compare with the previous instance of our example."
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f68dffcc",
+   "id": "49f8f603",
    "metadata": {},
    "source": [
     "## Appendix"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2b0138",
+   "id": "ca27f198",
    "metadata": {},
    "source": [
     "### Sample Paths of $ \\pi_t $\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64522772",
+   "id": "056457ad",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4665bdd",
+   "id": "6eff8945",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb3c0485",
+   "id": "cfc57847",
    "metadata": {},
    "source": [
     "We begin by generating $ N $ simulated $ \\{\\pi_t\\} $ paths with $ T $\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee5ebed",
+   "id": "155c9b1f",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c64fbe73",
+   "id": "22ff5aec",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cfe2afc",
+   "id": "375c9a66",
    "metadata": {},
    "source": [
     "In the above example,  for most paths $ \\pi_t \\rightarrow 1 $.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c947ef",
+   "id": "f7229600",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5dd591f",
+   "id": "55647360",
    "metadata": {},
    "source": [
     "In the above graph we observe that now  most paths $ \\pi_t \\rightarrow 0 $."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22af24b8",
+   "id": "7badf846",
    "metadata": {},
    "source": [
     "### Rates of convergence\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f13507f",
+   "id": "c19158f1",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "643d6339",
+   "id": "2a84e349",
    "metadata": {},
    "source": [
     "From the above graph, rates of convergence appear not to depend on whether $ F $ or $ G $ generates the data."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c835fc35",
+   "id": "e49483de",
    "metadata": {},
    "source": [
     "### Graph of Ensemble Dynamics of $ \\pi_t $\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c50091",
+   "id": "c8fb8dd0",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251ec2e6",
+   "id": "1bb29f2c",
    "metadata": {},
    "source": [
     "First, consider the case where $ F_a=F_b=1 $ and\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b948666",
+   "id": "450a021d",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e200eea6",
+   "id": "a60cb4f8",
    "metadata": {},
    "source": [
     "The above graphs shows that when $ F $ generates the data, $ \\pi_t $ on average always heads north, while\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb5f04d",
+   "id": "03e9cf5b",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e371568f",
+   "id": "ec3e411c",
    "metadata": {},
    "source": [
     "The above graph says that $ \\pi_t $ is inert and  remains at its initial value.\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1d9701",
+   "id": "e82ef212",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f628fe",
+   "id": "97b90f60",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1007,7 +1007,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658080.371617,
+  "date": 1706679396.1225011,
   "filename": "exchangeable.md",
   "kernelspec": {
    "display_name": "Python",
