--- a/wald_friedman.ipynb
+++ b/wald_friedman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58e62cd0",
+   "id": "c3f9d676",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075cae57",
+   "id": "80c8672d",
    "metadata": {},
    "source": [
     "# A Problem that Stumped Milton Friedman\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45db8895",
+   "id": "d24ce0a3",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92da4bcd",
+   "id": "bfa80def",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005a7a58",
+   "id": "1fc77381",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13496205",
+   "id": "c60e4de9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b91e7f",
+   "id": "126ea791",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a293fabb",
+   "id": "871d6d23",
    "metadata": {},
    "source": [
     "This lecture uses ideas studied in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), [this lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ea9253",
+   "id": "958c44fe",
    "metadata": {},
    "source": [
     "## Origin of the Problem\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dcbaae5",
+   "id": "52f650e6",
    "metadata": {},
    "source": [
     "## A Dynamic Programming Approach\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05eba375",
+   "id": "8070a92a",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd5d7512",
+   "id": "a2ff3e67",
    "metadata": {},
    "source": [
     "### Losses and Costs\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eef9fe4f",
+   "id": "9dc0af19",
    "metadata": {},
    "source": [
     "### Digression on Type I and Type II Errors\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "debe8b4c",
+   "id": "549a6b92",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e22252bc",
+   "id": "2b05cd09",
    "metadata": {},
    "source": [
     "### A Bellman Equation\n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fe95f0",
+   "id": "3e123582",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480bf1a5",
+   "id": "93cd69f0",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ddf7d9",
+   "id": "35bd79fd",
    "metadata": {
     "hide-output": false
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873ba4d2",
+   "id": "dc190da9",
    "metadata": {},
    "source": [
     "As in the [optimal growth lecture](https://dynamics.quantecon.org/optgrowth.html), to approximate a continuous value function\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3524796",
+   "id": "f34dbe9d",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d224c9ba",
+   "id": "f03adba4",
    "metadata": {},
    "source": [
     "To solve the key functional equation, we will iterate using `Q` to find the fixed point"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ae5868",
+   "id": "b54fdc30",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4e3370",
+   "id": "5fa7ec80",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac787b2",
+   "id": "78210d47",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5bd8d7",
+   "id": "a385c1cd",
    "metadata": {},
    "source": [
     "### Value Function\n",
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab8ed9f",
+   "id": "7137814d",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd155ede",
+   "id": "a83759c3",
    "metadata": {},
    "source": [
     "We will also set up a function to compute the cutoffs $ \\alpha $ and $ \\beta $\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51dd8552",
+   "id": "d2816451",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4819978",
+   "id": "163d83c8",
    "metadata": {},
    "source": [
     "The cost function $ J $ equals $ \\pi L_1 $ for $ \\pi \\leq \\beta $, and $ (1-\\pi )L_0 $ for $ \\pi\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efac33a",
+   "id": "271a4ae3",
    "metadata": {},
    "source": [
     "### Simulations\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589ead16",
+   "id": "1cd86a6c",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbdb24f",
+   "id": "56936757",
    "metadata": {},
    "source": [
     "### Comparative Statics\n",
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18876cc8",
+   "id": "a36c9742",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14332cd4",
+   "id": "9c127987",
    "metadata": {},
    "source": [
     "Increased cost per draw has induced the decision-maker to take fewer draws before deciding.\n",
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eebdc47",
+   "id": "50797788",
    "metadata": {},
    "source": [
     "### A Notebook Implementation\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf92eb13",
+   "id": "bfee2511",
    "metadata": {},
    "source": [
     "## Comparison with Neyman-Pearson Formulation\n",
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f79d317",
+   "id": "c23ace4d",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1203,7 +1203,7 @@
   }
  ],
  "metadata": {
-  "date": 1706658081.800995,
+  "date": 1706679397.4875925,
   "filename": "wald_friedman.md",
   "kernelspec": {
    "display_name": "Python",
